src/test/resources/tags/extendstag/errors/extends-no-error.jinja
{% extends "/errors/no-error.html" %}




{% block test %}
{% set test = 'test' %}
{{ test|add(1) }}
{% endblock %}
